@@ -1,3 +1,14 @@
+<b>2008-10-04</b>
+
+* Airline search and recording added
+* "Analyze" screen for stats added
+
+<b>2008-10-03</b>
+
+* Highlight user-entered airports in pink
+* Validity checks for lat,lon,elevation
+* Fix bug with loading countries from DAFIF
+
 <b>2008-10-02</b>
 
 * Increased default resolution of GC paths
